NFDIV-3476: Remove CO Answers, fix CO Letter for SwitchToSole, Fix unit tests